# helsinki-gse-seminar-digest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-digest.yml
api/: index.py  requirements.txt
migrations/: 001_initial.sql
src/hgse_event_calendar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/scraper/: calendar_links.py  cli.py  db.py  email_sender.py  email_template.py  models.py  scraper.py  tokens.py
templates/: confirmed.html  error.html  subscribe.html  success.html  unsubscribed.html
